updated notebooks & figures

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -228,11 +228,11 @@
     "            X_test=X_test, y_test=y_test, verbose=False)\n",
     "\n",
     "        # Transfer rules.\n",
-    "        try:\n",
+    "        if isinstance(brain_down, FFLocalNet):\n",
     "            # FF-ANN.\n",
     "            brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
     "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
-    "        except:\n",
+    "        else:\n",
     "            # RNN.\n",
     "            brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
     "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
@@ -380,25 +380,29 @@
     "        agg_stats_up = all_stats_up[i]\n",
     "        agg_stats_down = all_stats_down[i]\n",
     "        \n",
-    "        if len(agg_stats_up) == 5:\n",
+    "        if len(agg_stats_down) == 5:\n",
     "            # One run.\n",
-    "            (meta_losses, meta_train_acc, meta_test_acc, meta_sample_counts, meta_stats) = agg_stats_up\n",
+    "            if agg_stats_up is not None:\n",
+    "                (meta_losses, meta_train_acc, meta_test_acc, meta_sample_counts, meta_stats) = agg_stats_up\n",
     "            (plas_losses, plas_train_acc, plas_test_acc, plas_sample_counts, plas_stats) = agg_stats_down\n",
     "            plot_std = False\n",
     "        \n",
     "        else:\n",
     "            # Multiple runs.\n",
-    "            (meta_losses, meta_losses_std, meta_train_acc, meta_train_acc_std,\n",
-    "             meta_test_acc, meta_test_acc_std, meta_sample_counts, meta_stats) = agg_stats_up\n",
+    "            if agg_stats_up is not None:\n",
+    "                (meta_losses, meta_losses_std, meta_train_acc, meta_train_acc_std,\n",
+    "                 meta_test_acc, meta_test_acc_std, meta_sample_counts, meta_stats) = agg_stats_up\n",
     "            (plas_losses, plas_losses_std, plas_train_acc, plas_train_acc_std,\n",
     "             plas_test_acc, plas_test_acc_std, plas_sample_counts, plas_stats) = agg_stats_down\n",
     "            plot_std = True\n",
     "        \n",
-    "        ax[0].plot(meta_sample_counts, meta_test_acc, label=labels[i], color=default_colors[i])\n",
+    "        if agg_stats_up is not None:\n",
+    "            ax[0].plot(meta_sample_counts, meta_test_acc, label=labels[i], color=default_colors[i])\n",
     "        ax[1].plot(plas_sample_counts, plas_test_acc, label=labels[i], color=default_colors[i])\n",
     "        if plot_std:\n",
-    "            ax[0].fill_between(meta_sample_counts, meta_test_acc - meta_test_acc_std,\n",
-    "                               meta_test_acc + meta_test_acc_std, alpha=0.3, facecolor=default_colors[i])\n",
+    "            if agg_stats_up is not None:\n",
+    "                ax[0].fill_between(meta_sample_counts, meta_test_acc - meta_test_acc_std,\n",
+    "                                   meta_test_acc + meta_test_acc_std, alpha=0.3, facecolor=default_colors[i])\n",
     "            ax[1].fill_between(plas_sample_counts, plas_test_acc - plas_test_acc_std,\n",
     "                               plas_test_acc + plas_test_acc_std, alpha=0.3, facecolor=default_colors[i])\n",
     "        \n",
