--- a/BrainNet/notebooks/FF_experiments_universality_relu.ipynb
+++ b/BrainNet/notebooks/FF_experiments_universality_relu.ipynb
@@ -2073,8 +2073,8 @@
     }
    ],
    "source": [
-    "hyperparams = []\n",
-    "all_stats = []\n",
+    "hyperparams_prepost = []\n",
+    "all_stats_prepost = []\n",
     "\n",
     "for universal in [False, True]:  # Specialized rules or not?\n",
     "    \n",
@@ -2087,7 +2087,7 @@
     "            print('Number hidden layers:', l)\n",
     "            print('Hidden layer width:', w)\n",
     "            print('Cap:', cap)\n",
-    "            hyperparams.append((universal, l, w, cap))\n",
+    "            hyperparams_prepost.append((universal, l, w, cap))\n",
     "            \n",
     "            brain_prepost_fact = lambda: FFLocalNet(\n",
     "                n, m, l, w, p, cap,\n",
@@ -2099,7 +2099,7 @@
     "                brain_prepost_fact, n, dataset=dataset,\n",
     "                num_runs=num_runs, num_rule_epochs=num_rule_epochs,\n",
     "                num_epochs_upstream=num_epochs_upstream, num_epochs_downstream=num_epochs_downstream)\n",
-    "            all_stats.append(cur_stats)"
+    "            all_stats_prepost.append(cur_stats)"
    ]
   },
   {
@@ -3908,7 +3908,101 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 30/50 [02:47<01:45,  5.29s/it]"
+      "100%|██████████| 50/50 [04:26<00:00,  5.34s/it]\n",
+      "  1%|          | 10/1500 [00:00<00:14, 99.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4268\n",
+      "Last train accuracy: 0.8347\n",
+      "Last test accuracy: 0.8300\n",
+      "Count of 0: 3543  Count of 1: 2457\n",
+      "Training SAME brain instance (NO backprop)...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.4253\n",
+      "INITIAL test accuracy: 0.4000\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1500/1500 [00:06<00:00, 237.29it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 0.7280\n",
+      "Last train accuracy: 0.5767\n",
+      "Last test accuracy: 0.5951\n",
+      "\n",
+      "\n",
+      "Run 2 / 5...\n",
+      "Count of 0: 2117  Count of 1: 3883\n",
+      "Meta-learning...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [04:06<00:00,  4.93s/it]\n",
+      "  2%|▏         | 26/1500 [00:00<00:05, 250.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4861\n",
+      "Last train accuracy: 0.8573\n",
+      "Last test accuracy: 0.8578\n",
+      "Count of 0: 80  Count of 1: 5920\n",
+      "Training SAME brain instance (NO backprop)...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0173\n",
+      "INITIAL test accuracy: 0.0120\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1500/1500 [00:05<00:00, 256.14it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 0.5493\n",
+      "Last train accuracy: 0.7387\n",
+      "Last test accuracy: 0.7611\n",
+      "\n",
+      "\n",
+      "Run 3 / 5...\n",
+      "Count of 0: 5905  Count of 1: 95\n",
+      "Meta-learning...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 96%|█████████▌| 48/50 [04:08<00:10,  5.18s/it]"
      ]
     }
    ],
@@ -3944,11 +4038,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upstream accuracy:\n",
+      "[[[0.7484 0.7856 0.816 ]\n",
+      "  [0.7392 0.6837 0.8484]\n",
+      "  [0.7563 0.7688 0.6793]]\n",
+      "\n",
+      " [[0.74   0.8344 0.824 ]\n",
+      "  [0.7673 0.6299 0.6752]\n",
+      "  [0.6116 0.6983 0.7896]]]\n",
+      "Downstream accuracy:\n",
+      "[[[0.5821 0.6824 0.7628]\n",
+      "  [0.6632 0.7495 0.6951]\n",
+      "  [0.6691 0.7711 0.4728]]\n",
+      "\n",
+      " [[0.6728 0.7036 0.5943]\n",
+      "  [0.6615 0.7248 0.6549]\n",
+      "  [0.7593 0.5952 0.6537]]]\n",
+      "Downstream speed:\n",
+      "[[[0.4357 0.5361 0.6224]\n",
+      "  [0.4902 0.5124 0.5897]\n",
+      "  [0.506  0.5928 0.3212]]\n",
+      "\n",
+      " [[0.4979 0.5871 0.4897]\n",
+      "  [0.5076 0.4565 0.4422]\n",
+      "  [0.4644 0.4156 0.5162]]]\n",
+      "Product:\n",
+      "[[[0.4357 0.5361 0.6224]\n",
+      "  [0.4902 0.5124 0.5897]\n",
+      "  [0.506  0.5928 0.3212]]\n",
+      "\n",
+      " [[0.4979 0.5871 0.4897]\n",
+      "  [0.5076 0.4565 0.4422]\n",
+      "  [0.4644 0.4156 0.5162]]]\n"
+     ]
+    }
+   ],
    "source": [
     "metrics_prepostcount = get_metrics(hyperparams_prepostcount, all_stats_prepostcount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three best configs:\n",
+    "\n",
+    "* XXX"
    ]
   },
   {
@@ -4002,11 +4144,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upstream accuracy:\n",
+      "[[[0.6532 0.6628 0.8896]\n",
+      "  [0.7575 0.7847 0.8221]\n",
+      "  [0.652  0.5649 0.8261]]\n",
+      "\n",
+      " [[0.5968 0.6827 0.8489]\n",
+      "  [0.6305 0.6939 0.8673]\n",
+      "  [0.6765 0.6941 0.8144]]]\n",
+      "Downstream accuracy:\n",
+      "[[[0.6189 0.6157 0.6616]\n",
+      "  [0.5892 0.7863 0.6639]\n",
+      "  [0.5997 0.6403 0.6979]]\n",
+      "\n",
+      " [[0.6571 0.6788 0.6635]\n",
+      "  [0.8376 0.8079 0.5908]\n",
+      "  [0.6593 0.6684 0.6941]]]\n",
+      "Downstream speed:\n",
+      "[[[0.4043 0.4081 0.5886]\n",
+      "  [0.4463 0.617  0.5458]\n",
+      "  [0.391  0.3617 0.5765]]\n",
+      "\n",
+      " [[0.3921 0.4634 0.5632]\n",
+      "  [0.5281 0.5606 0.5124]\n",
+      "  [0.4461 0.464  0.5653]]]\n",
+      "Product:\n",
+      "[[[0.4043 0.4081 0.5886]\n",
+      "  [0.4463 0.617  0.5458]\n",
+      "  [0.391  0.3617 0.5765]]\n",
+      "\n",
+      " [[0.3921 0.4634 0.5632]\n",
+      "  [0.5281 0.5606 0.5124]\n",
+      "  [0.4461 0.464  0.5653]]]\n"
+     ]
+    }
+   ],
    "source": [
     "metrics_prepostpercent = get_metrics(hyperparams_prepostpercent, all_stats_prepostpercent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three best configs:\n",
+    "\n",
+    "* XXX"
    ]
   },
   {
