Some more documentation in FF_common

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -52,6 +52,9 @@
    "outputs": [],
    "source": [
     "def quick_get_data(which, dim, N=2000, split=0.75, relu_k=8):\n",
+    "    '''\n",
+    "    Quick, get some data!\n",
+    "    '''\n",
     "    which = which.lower()\n",
     "    \n",
     "    if which == 'halfspace':\n",
@@ -96,7 +99,7 @@
     "                   num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
     "                   num_epochs_downstream=1):\n",
     "    '''\n",
-    "    Evaluate a single network instance by meta-learning and then\n",
+    "    Evaluate a SINGLE network instance by meta-learning and then\n",
     "    training on a reinitialized dataset of the same dimensionality.\n",
     "    IMPORTANT NOTE: Backprop is disabled downstream, since we assume\n",
     "    layers with direct gradient descent to be trained upstream already.\n",
@@ -150,6 +153,7 @@
     "    '''\n",
     "    Evaluate the quality of meta-learning and rule interpretations by\n",
     "    training a different network instance with transferred rules.\n",
+    "    NOTE: if n_down is None, retain the exact same dataset instance.\n",
     "    '''\n",
     "    multi_stats_up = []\n",
     "    multi_stats_down = []\n",
@@ -205,7 +209,7 @@
     "def evaluate_generalization(brain_up_fact, brain_down_fact, n_up, n_down,\n",
     "                            dataset_up='halfspace', dataset_down='mnist',\n",
     "                            num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
-    "                            num_epochs_downstream=1,get_model=False):\n",
+    "                            num_epochs_downstream=1, get_model=False):\n",
     "    '''\n",
     "    Evaluate the quality of meta-learning and rule interpretations by\n",
     "    training a different network on a more complex dataset with transferred rules.\n",
@@ -264,6 +268,10 @@
    "outputs": [],
    "source": [
     "def convert_multi_stats_uncertainty(multi_stats):\n",
+    "    '''\n",
+    "    Merge and summarize stats from multiple runs into one tuple that\n",
+    "    tracks means and standard deviations over time.\n",
+    "    '''\n",
     "    all_losses = np.array([s[0] for s in multi_stats])\n",
     "    all_train_acc = np.array([s[1] for s in multi_stats])\n",
     "    all_test_acc = np.array([s[2] for s in multi_stats])\n",
@@ -294,6 +302,10 @@
    "outputs": [],
    "source": [
     "def plot_curves(agg_stats_up, agg_stats_down, title_up, title_down, save_name='figs/default', no_downstream_loss=False):\n",
+    "    '''\n",
+    "    Plot upstream (optional) and downstream (required) learning curves of ONE model.\n",
+    "    If multiple runs were executed, the shaded areas indicate standard deviations.\n",
+    "    '''\n",
     "    if len(agg_stats_down) == 5:\n",
     "        # One run.\n",
     "        if agg_stats_up is not None:\n",
@@ -374,6 +386,10 @@
    "outputs": [],
    "source": [
     "def plot_compare_models(all_stats_up, all_stats_down, labels, title_up, title_down, save_name='figs/default'):\n",
+    "    '''\n",
+    "    Plot upstream (optional) and downstream (required) curves of\n",
+    "    only one metric (test accuracy) across MANY models.\n",
+    "    '''\n",
     "    num_models = len(all_stats_up)\n",
     "    assert(num_models == len(all_stats_down) and num_models == len(labels))\n",
     "    \n",
@@ -449,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
