--- a/BrainNet/notebooks/FF_experiments_universality_halfspace.ipynb
+++ b/BrainNet/notebooks/FF_experiments_universality_halfspace.ipynb
@@ -1601,9 +1601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hyperparams_prepostpercent' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-1e8fd6a2eedd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmetrics_prepostpercent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_metrics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhyperparams_prepostpercent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_stats_prepostpercent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'hyperparams_prepostpercent' is not defined"
+     ]
+    }
+   ],
    "source": [
     "metrics_prepostpercent = get_metrics(hyperparams_prepostpercent, all_stats_prepostpercent)"
    ]
