Update to FF_common: just two evaluate() methods for clarity

--- a/BrainNet/notebooks/FF_experiments_generalization.ipynb
+++ b/BrainNet/notebooks/FF_experiments_generalization.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -633,7 +633,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|███████▎  | 44197/60000 [12:36<02:36, 101.20it/s] "
+      "100%|██████████| 60000/60000 [17:09<00:00, 58.30it/s]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3652\n",
+      "Last train accuracy: 0.1124\n",
+      "Last test accuracy: 0.1135\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -651,7 +669,359 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Interpretation: PrePost (universal) ====\n",
+      "\n",
+      "Run 1 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:24<00:00,  4.09s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.4840\n",
+      "Last test accuracy: 0.5060\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [24:29<00:00, 40.82it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3026\n",
+      "Last train accuracy: 0.0987\n",
+      "Last test accuracy: 0.0980\n",
+      "\n",
+      "\n",
+      "Run 2 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:21<00:00,  4.03s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.4960\n",
+      "Last test accuracy: 0.4660\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [24:57<00:00, 40.06it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3026\n",
+      "Last train accuracy: 0.0987\n",
+      "Last test accuracy: 0.0980\n",
+      "\n",
+      "\n",
+      "Run 3 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:14<00:00,  3.89s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3848\n",
+      "Last train accuracy: 0.9313\n",
+      "Last test accuracy: 0.9380\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [26:01<00:00, 38.42it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3732\n",
+      "Last train accuracy: 0.1124\n",
+      "Last test accuracy: 0.1135\n",
+      "\n",
+      "\n",
+      "Run 4 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:24<00:00,  4.08s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.5167\n",
+      "Last test accuracy: 0.4580\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [25:56<00:00, 38.56it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.2142\n",
+      "Last train accuracy: 0.1927\n",
+      "Last test accuracy: 0.1965\n",
+      "\n",
+      "\n",
+      "Run 5 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:34<00:00,  4.30s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4257\n",
+      "Last train accuracy: 0.8647\n",
+      "Last test accuracy: 0.8280\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [25:55<00:00, 38.57it/s]  \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.2172\n",
+      "Last train accuracy: 0.2613\n",
+      "Last test accuracy: 0.2665\n",
+      "\n",
+      "\n",
+      "Run 6 / 10...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [03:34<00:00,  4.28s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6931\n",
+      "Last train accuracy: 0.4967\n",
+      "Last test accuracy: 0.5200\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance (WITH backprop) on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 86%|████████▌ | 51497/60000 [20:42<03:03, 46.46it/s]  "
+     ]
+    }
+   ],
    "source": [
     "print('==== Interpretation: PrePost (universal) ====')\n",
     "stats_prepost_up, stats_prepost_down = evaluate_generalization(\n",
