--- a/BrainNet/notebooks/RNN_mnist_transfer.ipynb
+++ b/BrainNet/notebooks/RNN_mnist_transfer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,23 @@
     "                    use_output_rule=True,\n",
     "                    gd_output_rule=False,  # Not meta-trainable anymore!\n",
     "                    gd_output=False)\n",
-    "scheme = UpdateScheme(cross_entropy_loss=True,\n",
-    "                      mse_loss=False,\n",
-    "                      update_misclassified_only=False,\n",
-    "                      update_all_edges=True)\n",
+    "if 0:\n",
+    "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
+    "                          mse_loss=False,\n",
+    "                          update_misclassified_only=False,  # Deviates from paper.\n",
+    "                          update_all_edges=True)  # Deviates from paper.\n",
+    "else:\n",
+    "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
+    "                          mse_loss=False,\n",
+    "                          update_misclassified_only=True,\n",
+    "                          update_all_edges=False)\n",
     "\n",
     "# Feed-forward brain config.\n",
-    "n_up = 16  # Input layer size for meta-learning.\n",
-    "n_down = 28 * 28  # Input layer size for desired task training.\n",
-    "m_up = 2  # Output layer size for meta-learning.\n",
-    "m_down = 10  # Output layer size for desired task training.\n",
-    "l = 4  # Number of hidden layers.\n",
-    "w = 64  # Width of hidden layers.\n",
-    "p = 0.5  # Connectivity probability.\n",
-    "cap = 32  # Number of nodes firing per layer.\n",
+    "n_up = 16  # Unknown.\n",
+    "n_down = 28 * 28\n",
+    "m_up = 2  # Unknown.\n",
+    "m_down = 10\n",
+    "p = 0.5\n",
     "\n",
     "# Training config.\n",
     "num_runs = 10\n",
@@ -60,6 +63,36 @@
     "dataset_up = 'halfspace'\n",
     "dataset_down = 'mnist'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In this notebook: Transfer rules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate brains.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
