--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -95,14 +95,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_brain(brain_fact, n, dataset='halfspace',\n",
-    "                   num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
-    "                   num_epochs_downstream=1):\n",
+    "def evaluate_brain(brain_fact, n,\n",
+    "                   dataset='halfspace', dataset_down='halfspace', downstream_backprop=False,\n",
+    "                   num_runs=2, num_rule_epochs=20, num_epochs_upstream=1, num_epochs_downstream=1):\n",
     "    '''\n",
     "    Evaluate a SINGLE network instance by meta-learning and then\n",
     "    training on a reinitialized dataset of the same dimensionality.\n",
-    "    IMPORTANT NOTE: Backprop is disabled downstream, since we assume\n",
-    "    layers with direct gradient descent to be trained upstream already.\n",
+    "    \n",
+    "    Args:\n",
+    "        brain_fact: Calling brain_fact() will create a new instance of the network under test.\n",
+    "        dataset: Upstream dataset class (halfspace / relu / mnist).\n",
+    "        dataset_down: If None, keep the same dataset. Otherwise, downstream dataset class.\n",
+    "        downstream_backprop: Use backprop for the direct GD layers downstream?\n",
+    "            Recommended False if dataset_down is None, since we assume layers\n",
+    "            with direct gradient descent to be trained upstream already.\n",
+    "            \n",
+    "    Returns:\n",
+    "        (multi_stats_up, multi_stats_down).\n",
+    "        Both are lists of length num_runs.\n",
     "    '''\n",
     "    multi_stats_up = []\n",
     "    multi_stats_down = []\n",
@@ -114,22 +124,25 @@
     "    \n",
     "        # Upstream.\n",
     "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n)\n",
-    "        print('Meta-learning...')\n",
+    "        print('Meta-learning on ' + dataset + '...')\n",
     "        stats_up = metalearn_rules(\n",
     "            X_train, y_train, brain, num_rule_epochs=num_rule_epochs,\n",
-    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
+    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False)\n",
     "        \n",
     "        # Downstream.\n",
-    "        # No rule transfer needed since we reuse the same network,\n",
-    "        # but just on an altered dataset.\n",
-    "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n)\n",
-    "        print('Training SAME brain instance (NO backprop)...')\n",
+    "        # NO rule transfer needed since we reuse the same network,\n",
+    "        # but just on a possibly altered dataset.\n",
+    "        if dataset_down is not None:\n",
+    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_down, n)\n",
+    "            print('Training SAME brain instance on ' + dataset_down + '...')\n",
+    "        else:\n",
+    "            print('Training SAME brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain, num_epochs=num_epochs_downstream,\n",
     "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False,\n",
-    "            stats_interval=500, disable_backprop=True)\n",
+    "            stats_interval=500, disable_backprop=not(downstream_backprop))\n",
     "        \n",
     "        # Save this run.\n",
     "        multi_stats_up.append(stats_up)\n",
@@ -147,14 +160,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_up_down(brain_up_fact, brain_down_fact, n_up, n_down, dataset='halfspace',\n",
-    "                     num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
-    "                     num_epochs_downstream=1):\n",
+    "def evaluate_up_down(brain_up_fact, brain_down_fact, n_up, n_down,\n",
+    "                     dataset='halfspace', dataset_down='halfspace', downstream_backprop=False,\n",
+    "                     num_runs=2, num_rule_epochs=20, num_epochs_upstream=1, num_epochs_downstream=1,\n",
+    "                     get_model=False):\n",
     "    '''\n",
-    "    Evaluate the quality of meta-learning and rule interpretations by\n",
-    "    training a different network instance with transferred rules.\n",
+    "    Evaluates a PAIR of brains on the quality of meta-learning\n",
+    "    and rule interpretations by training with transferred rules.\n",
     "    NOTE: if n_down is None, retain the exact same dataset instance.\n",
+    "    NOTE: if dataset_down is None, use same dataset class as dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        brain_up_fact: Calling this will create a new instance of the network to meta-learn.\n",
+    "        brain_down_fact: Calling this will create a new instance of the network to train.\n",
+    "        dataset: Upstream dataset class (halfspace / relu / mnist).\n",
+    "        dataset_down: If None, keep the same dataset. Otherwise, downstream dataset class.\n",
+    "        downstream_backprop: Use backprop for the direct GD layers downstream?\n",
+    "            Recommended True, since the downstream weights will remain randomly initialized otherwise.\n",
+    "            \n",
+    "    Returns:\n",
+    "        (multi_stats_up, multi_stats_down) or ((multi_stats_up, multi_stats_down), brain_down).\n",
+    "        Both are lists of length num_runs.\n",
     "    '''\n",
+    "    if (dataset_down is None) != (n_down is None):\n",
+    "        raise ValueError('The nullness of dataset_down does not agree with that of n_down.')\n",
+    "    \n",
     "    multi_stats_up = []\n",
     "    multi_stats_down = []\n",
     "    \n",
@@ -166,69 +196,10 @@
     "    \n",
     "        # Upstream.\n",
     "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n_up)\n",
-    "        print('Meta-learning...')\n",
+    "        print('Meta-learning on ' + dataset + '...')\n",
     "        stats_up = metalearn_rules(\n",
     "            X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
-    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
-    "            X_test=X_test, y_test=y_test, verbose=False)\n",
-    "\n",
-    "        # Transfer rules.\n",
-    "        try:\n",
-    "            # FF-ANN.\n",
-    "            brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
-    "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
-    "        except:\n",
-    "            # RNN.\n",
-    "            brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
-    "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
-    "\n",
-    "        # Downstream.\n",
-    "        if n_down is not None:\n",
-    "            X_train, y_train, X_test, y_test = quick_get_data(dataset, n_down)\n",
-    "        print('Training NEW brain instance (WITH backprop)...')\n",
-    "        stats_down = train_downstream(\n",
-    "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
-    "            X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)\n",
-    "        \n",
-    "        # Save this run.\n",
-    "        multi_stats_up.append(stats_up)\n",
-    "        multi_stats_down.append(stats_down)\n",
-    "        \n",
-    "        print()\n",
-    "    \n",
-    "    return (multi_stats_up, multi_stats_down)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_generalization(brain_up_fact, brain_down_fact, n_up, n_down,\n",
-    "                            dataset_up='halfspace', dataset_down='mnist',\n",
-    "                            num_runs=2, num_rule_epochs=20, num_epochs_upstream=1,\n",
-    "                            num_epochs_downstream=1, get_model=False):\n",
-    "    '''\n",
-    "    Evaluate the quality of meta-learning and rule interpretations by\n",
-    "    training a different network on a more complex dataset with transferred rules.\n",
-    "    '''\n",
-    "    multi_stats_up = []\n",
-    "    multi_stats_down = []\n",
-    "    \n",
-    "    for run in range(num_runs):\n",
-    "        print()\n",
-    "        print(f'Run {run+1} / {num_runs}...')\n",
-    "        brain_up = brain_up_fact()\n",
-    "        brain_down = brain_down_fact()\n",
-    "    \n",
-    "        # Upstream.\n",
-    "        X_train, y_train, X_test, y_test = quick_get_data(dataset_up, n_up)\n",
-    "        print('Meta-learning on ' + dataset_up + '...')\n",
-    "        stats_up = metalearn_rules(\n",
-    "            X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
-    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
+    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False)\n",
     "\n",
     "        # Transfer rules.\n",
@@ -242,12 +213,16 @@
     "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
     "\n",
     "        # Downstream.\n",
-    "        X_train, y_train, X_test, y_test = quick_get_data(dataset_down, n_down)\n",
-    "        print('Training NEW brain instance (WITH backprop) on ' + dataset_down + '...')\n",
+    "        if dataset_down is not None and n_down is not None:\n",
+    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_down, n_down)\n",
+    "            print('Training NEW brain instance on ' + dataset_down + '...')\n",
+    "        else:\n",
+    "            print('Training NEW brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
     "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
-    "            X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)\n",
+    "            X_test=X_test, y_test=y_test, verbose=False,\n",
+    "            stats_interval=500, disable_backprop=not(downstream_backprop))\n",
     "        \n",
     "        # Save this run.\n",
     "        multi_stats_up.append(stats_up)\n",
@@ -255,10 +230,29 @@
     "        \n",
     "        print()\n",
     "    \n",
+    "    \n",
     "    if get_model:\n",
     "        return (multi_stats_up, multi_stats_down), brain_down\n",
     "    else:\n",
     "        return (multi_stats_up, multi_stats_down)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_generalization(brain_up_fact, brain_down_fact, n_up, n_down, **kwargs):\n",
+    "    '''\n",
+    "    Legacy method.\n",
+    "    Evaluate the quality of meta-learning and rule interpretations by\n",
+    "    training a different network on a more complex dataset with transferred rules.\n",
+    "    '''\n",
+    "    kwargs['dataset'] = kwargs['dataset_up']\n",
+    "    kwargs['downstream_backprop'] = True\n",
+    "    del kwargs['dataset_up']\n",
+    "    return evaluate_up_down(brain_up_fact, brain_down_fact, n_up, n_down, **kwargs)"
    ]
   },
   {
