min_upstream_acc to evaluate() in FF_common

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -91,24 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_brain(brain_fact, n,\n",
-    "                   dataset='halfspace', dataset_down='halfspace', downstream_backprop=False,\n",
-    "                   num_runs=2, num_rule_epochs=20, num_epochs_upstream=1, num_epochs_downstream=1):\n",
+    "                   dataset_up='halfspace', dataset_down='halfspace', downstream_backprop=False,\n",
+    "                   num_runs=1, num_rule_epochs=50, num_epochs_upstream=1, num_epochs_downstream=1,\n",
+    "                   min_upstream_acc=0.7):\n",
     "    '''\n",
     "    Evaluate a SINGLE network instance by meta-learning and then\n",
     "    training on a reinitialized dataset of the same dimensionality.\n",
     "    \n",
     "    Args:\n",
     "        brain_fact: Calling brain_fact() will create a new instance of the network under test.\n",
-    "        dataset: Upstream dataset class (halfspace / relu / mnist).\n",
-    "        dataset_down: If None, keep the same dataset. Otherwise, downstream dataset class.\n",
+    "        dataset_up: Upstream dataset class (halfspace / relu / mnist).\n",
+    "        dataset_down: If None, keep the same dataset instance. Otherwise, downstream dataset class.\n",
     "        downstream_backprop: Use backprop for the direct GD layers downstream?\n",
     "            Recommended False if dataset_down is None, since we assume layers\n",
     "            with direct gradient descent to be trained upstream already.\n",
+    "        min_upstream_acc: Keep meta-learning until we find a good random initialization with\n",
+    "            this final test accuracy.\n",
     "            \n",
     "    Returns:\n",
     "        (multi_stats_up, multi_stats_down).\n",
@@ -120,15 +123,22 @@
     "    for run in range(num_runs):\n",
     "        print()\n",
     "        print(f'Run {run+1} / {num_runs}...')\n",
-    "        brain = brain_fact()\n",
-    "    \n",
+    "        \n",
     "        # Upstream.\n",
-    "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n)\n",
-    "        print('Meta-learning on ' + dataset + '...')\n",
-    "        stats_up = metalearn_rules(\n",
-    "            X_train, y_train, brain, num_rule_epochs=num_rule_epochs,\n",
-    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=5e-3,\n",
-    "            X_test=X_test, y_test=y_test, verbose=False)\n",
+    "        success = False\n",
+    "        while not success:\n",
+    "            brain = brain_fact()  # NOTE: Some initializations are unlucky.\n",
+    "\n",
+    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_up, n)\n",
+    "            print('Meta-learning on ' + dataset_up + '...')\n",
+    "            stats_up = metalearn_rules(\n",
+    "                X_train, y_train, brain, num_rule_epochs=num_rule_epochs,\n",
+    "                num_epochs=num_epochs_upstream, batch_size=256, learn_rate=5e-3,\n",
+    "                X_test=X_test, y_test=y_test, verbose=False)\n",
+    "            \n",
+    "            success = (stats_up[2][-1] >= min_upstream_acc)\n",
+    "            if not success:\n",
+    "                print(f'Final upstream test acc {stats_up[2][-1]:.4f} not high enough, retrying...')\n",
     "        \n",
     "        # Downstream.\n",
     "        # NO rule transfer needed since we reuse the same network,\n",
@@ -140,7 +150,7 @@
     "            print('Training SAME brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
+    "            batch_size=256, vanilla=False, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False,\n",
     "            stats_interval=500, disable_backprop=not(downstream_backprop))\n",
     "        \n",
@@ -150,8 +160,7 @@
     "        \n",
     "        print()\n",
     "    \n",
-    "    return (multi_stats_up, multi_stats_down)\n",
-    "    "
+    "    return (multi_stats_up, multi_stats_down)"
    ]
   },
   {
@@ -161,22 +170,22 @@
    "outputs": [],
    "source": [
     "def evaluate_up_down(brain_up_fact, brain_down_fact, n_up, n_down,\n",
-    "                     dataset='halfspace', dataset_down='halfspace', downstream_backprop=False,\n",
-    "                     num_runs=2, num_rule_epochs=20, num_epochs_upstream=1, num_epochs_downstream=1,\n",
-    "                     get_model=False):\n",
+    "                     dataset_up='halfspace', dataset_down='halfspace', downstream_backprop=False,\n",
+    "                     num_runs=1, num_rule_epochs=50, num_epochs_upstream=1, num_epochs_downstream=1,\n",
+    "                     get_model=False, min_upstream_acc=0.7):\n",
     "    '''\n",
     "    Evaluates a PAIR of brains on the quality of meta-learning\n",
     "    and rule interpretations by training with transferred rules.\n",
-    "    NOTE: if n_down is None, retain the exact same dataset instance.\n",
-    "    NOTE: if dataset_down is None, use same dataset class as dataset.\n",
     "    \n",
     "    Args:\n",
     "        brain_up_fact: Calling this will create a new instance of the network to meta-learn.\n",
     "        brain_down_fact: Calling this will create a new instance of the network to train.\n",
-    "        dataset: Upstream dataset class (halfspace / relu / mnist).\n",
-    "        dataset_down: If None, keep the same dataset. Otherwise, downstream dataset class.\n",
+    "        dataset_up: Upstream dataset class (halfspace / relu / mnist).\n",
+    "        dataset_down: If None, keep the same dataset instance. Otherwise, downstream dataset class.\n",
     "        downstream_backprop: Use backprop for the direct GD layers downstream?\n",
     "            Recommended True, since the downstream weights will remain randomly initialized otherwise.\n",
+    "        min_upstream_acc: Keep meta-learning until we find a good random initialization with\n",
+    "            this final test accuracy.\n",
     "            \n",
     "    Returns:\n",
     "        (multi_stats_up, multi_stats_down) or ((multi_stats_up, multi_stats_down), brain_down).\n",
@@ -191,26 +200,40 @@
     "    for run in range(num_runs):\n",
     "        print()\n",
     "        print(f'Run {run+1} / {num_runs}...')\n",
-    "        brain_up = brain_up_fact()\n",
-    "        brain_down = brain_down_fact()\n",
-    "    \n",
+    "        \n",
     "        # Upstream.\n",
-    "        X_train, y_train, X_test, y_test = quick_get_data(dataset, n_up)\n",
-    "        print('Meta-learning on ' + dataset + '...')\n",
-    "        stats_up = metalearn_rules(\n",
-    "            X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
-    "            num_epochs=num_epochs_upstream, batch_size=100, learn_rate=5e-3,\n",
-    "            X_test=X_test, y_test=y_test, verbose=False)\n",
+    "        success = False\n",
+    "        while not success:\n",
+    "            brain_up = brain_up_fact()  # NOTE: Some initializations are unlucky.\n",
+    "    \n",
+    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_up, n_up)\n",
+    "            print('Meta-learning on ' + dataset_up + '...')\n",
+    "            stats_up = metalearn_rules(\n",
+    "                X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
+    "                num_epochs=num_epochs_upstream, batch_size=256, learn_rate=5e-3,\n",
+    "                X_test=X_test, y_test=y_test, verbose=False)\n",
+    "            \n",
+    "            success = (stats_up[2][-1] >= min_upstream_acc)\n",
+    "            if not success:\n",
+    "                print(f'Final upstream test acc {stats_up[2][-1]:.4f} not high enough, retrying...')\n",
     "\n",
     "        # Transfer rules.\n",
+    "        brain_down = brain_down_fact()\n",
     "        if isinstance(brain_down, FFLocalNet):\n",
     "            # FF-ANN.\n",
     "            brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
     "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
     "        else:\n",
     "            # RNN.\n",
-    "            brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
-    "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "            try:\n",
+    "                brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
+    "                brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "            except:\n",
+    "                print('FALLBACK: direct assignment of rules...')\n",
+    "                if downstream_backprop:\n",
+    "                    print('=> WARNING: Rules might still be updated by GD this way')\n",
+    "                brain_down.rnn_rule = brain_up.rnn_rule\n",
+    "                brain_down.output_rule = brain_up.output_rule\n",
     "\n",
     "        # Downstream.\n",
     "        if dataset_down is not None and n_down is not None:\n",
@@ -220,7 +243,7 @@
     "            print('Training NEW brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
+    "            batch_size=256, vanilla=False, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False,\n",
     "            stats_interval=500, disable_backprop=not(downstream_backprop))\n",
     "        \n",
@@ -249,9 +272,7 @@
     "    Evaluate the quality of meta-learning and rule interpretations by\n",
     "    training a different network on a more complex dataset with transferred rules.\n",
     "    '''\n",
-    "    kwargs['dataset'] = kwargs['dataset_up']\n",
     "    kwargs['downstream_backprop'] = True\n",
-    "    del kwargs['dataset_up']\n",
     "    return evaluate_up_down(brain_up_fact, brain_down_fact, n_up, n_down, **kwargs)"
    ]
   },
