--- a/BrainNet/notebooks/FF_experiments_comparing_relu.ipynb
+++ b/BrainNet/notebooks/FF_experiments_comparing_relu.ipynb
@@ -21,13 +21,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## First, test original RNN as a sanity check."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -46,10 +39,17 @@
     "                    use_output_rule=True,\n",
     "                    gd_output_rule=False,  # Not meta-trainable anymore!\n",
     "                    gd_output=False)\n",
-    "scheme = UpdateScheme(cross_entropy_loss=True,\n",
-    "                      mse_loss=False,\n",
-    "                      update_misclassified_only=False,\n",
-    "                      update_all_edges=True)\n",
+    "if 0:\n",
+    "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
+    "                          mse_loss=False,\n",
+    "                          update_misclassified_only=False,\n",
+    "                          update_all_edges=True)\n",
+    "else:\n",
+    "    # Same as paper.\n",
+    "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
+    "                          mse_loss=False,\n",
+    "                          update_misclassified_only=True,\n",
+    "                          update_all_edges=False)\n",
     "\n",
     "# Feed-forward brain config.\n",
     "n_up = 8  # Input layer size for meta-learning.\n",
